<resources>
    <string name="app_name">Бірсет склад</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_login">Beerset`s warehouse</string>
    <string name="prompt_email">Користувач 1с</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти в програму</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Ласкаво просимо !"</string>
    <string name="invalid_username">Неправильно вказано ім`я користувача</string>
    <string name="invalid_password">Пароль не може бути пустим</string>
    <string name="login_failed">"Login failed"</string>
    <string name="new_item">Нові</string>
    <string name="close_item">Закриті</string>
    <string name="error_item">Помилки</string>
    <string name="in_work">В роботі</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="begin_work">Почати</string>
    <string name="begin_work_question">Почати роботу?</string>
    <string name="end_work">Закінчити</string>
    <string name="close_order">Закрити</string>
    <string name="order">Заказ</string>
    <string name="goods">Товари</string>
    <string name="activity_intent_filter_action">com.vereskul.tc51versusXML.ACTION</string>
    <string name="datawedge_intent_key_source">com.symbol.datawedge.source</string>
    <string name="datawedge_intent_key_label_type">com.symbol.datawedge.label_type</string>
    <string name="datawedge_intent_key_data">com.symbol.datawedge.data_string</string>
    <string name="previous"><![CDATA[<<<]]></string>
    <string name="next"><![CDATA[>>>]]></string>
    <string name="all">Всі</string>
    <string name="order_online">Заказ онлайн</string>
    <string name="select_order_date">Виберіть дату накланої</string>
    <string name="select_supplier">Виберіть постачальника</string>
    <string name="select_stock">Виберіть склад</string>
    <string name="select_item">Виберіть товар</string>
    <string name="select_qty">Вкажіть кількість</string>
    <string name="select_price">Вкажіть ціну</string>
    <string name="select_barcode">Вкажіть штрихкод</string>
    <string name="save_order">Зберегти накладну</string>
    <string name="item_qty_is_right">Кількість товарів вірна</string>
    <string name="add_item">Додати товар</string>
    <string name="new_order">Нова накладна</string>
    <string name="supplier_name_error">Невірно вказан постачальник</string>
    <string name="stock_name_error">Назва складу невірна</string>
    <string name="date_must_be_today">Дата повинна бути сьогоднішньою</string>
    <string name="susccess_saving_order">Накладну сбережено</string>
    <string name="save_order_error">Помилка збереження накладної</string>
    <string name="text_order_number">Номер:</string>
    <string name="text_order_date">Дата:</string>
    <string name="text_order_supplier">Постачальник:</string>
    <string name="text_order_begin">Час початку:</string>
    <string name="text_order_end">Час закінчення:</string>
    <string name="text_label_item_name">Назва товару:</string>
    <string name="text_label_qty">Кількість в накладної:</string>
    <string name="text_label_qty_fact">Кількість по факту:</string>
    <string name="text_label_barcode">Штрихкод:</string>
    <string name="text_buton_add_barcode">Додати штрихкод у 1с</string>
    <string name="error_fact_below_zero">Значення не може бути менше нуля</string>
    <string name="error_fact_not_digit">Має бути число!</string>
    <string name="error_work_begin">Почніть роботу!</string>
    <string name="ok">Так</string>
    <string name="cancel">Відміна</string>
    <string name="end_work_question">Закрити заказ?</string>
    <string name="error_in_qty_quetion">В заказі є відхилення, продовжити?</string>
    <string name="order_is_saved">Заказ збережено!</string>
    <string name="error_order_saving">Помилка у збереженні заказу!</string>
    <string name="its_tare">Це тара?</string>
    <string name="error_barcode_question">Невірний штрихкод. Продовжити?</string>
    <string name="barcode_not_found">Штрихкод не знайдено</string>
    <string name="error_order_closed">Заказ вже закрито!</string>
    <string name="order_is_over">Замовлення виконано!</string>
    <string name="synchronize">Синхронізувати</string>
    <string name="notify_title">Пройшло оновлення заказів</string>
    <string name="notify_text">Отримано %1$d заказів, завантажено %2$d заказів</string>
</resources>