<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item android:id="@+id/item_all" android:title="@string/all" android:icon="@drawable/add_order"/>
        <item android:id="@+id/item_new" android:title="@string/new_item" android:icon="@drawable/green_circle_img"/>
        <item android:id="@+id/item_in_work" android:title="@string/in_work" android:icon="@drawable/yellow_circle"/>
        <item android:id="@+id/item_closed" android:title="@string/close_item" android:icon="@drawable/blue_circle"/>
        <item android:id="@+id/item_errors" android:title="@string/error_item" android:icon="@drawable/multiply"/>
        <item android:id="@+id/refresh_orders"
            android:title="@string/synchronize"
            android:icon="@drawable/baseline_refresh_24"
            android:iconTint="@color/white"
            app:showAsAction="ifRoom"/>
    </group>

</menu>