<?xml version="1.0" encoding="utf-8"?>
<layout>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.online_order.OnlineOrderGoodsItemFragment">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#EDE7F6"
            android:orientation="vertical">

            <AutoCompleteTextView
                android:id="@+id/select_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:autofillHints="name"
                android:hint="@string/select_item"
                android:inputType="textPersonName"
                android:padding="5dp" />

            <EditText
                android:id="@+id/select_qty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:autofillHints="name"
                android:gravity="center_horizontal"
                android:hint="@string/select_qty"
                android:inputType="numberDecimal"
                android:padding="5dp" />

            <EditText
                android:id="@+id/select_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:autofillHints="name"
                android:gravity="center_horizontal"
                android:hint="@string/select_price"
                android:inputType="numberDecimal"
                android:padding="5dp" />

            <EditText
                android:id="@+id/select_barcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:autofillHints="name"
                android:gravity="center_horizontal"
                android:hint="@string/select_barcode"
                android:inputType="number"
                android:padding="5dp" />

            <TextView
                android:id="@+id/current_units"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp" />


        </androidx.appcompat.widget.LinearLayoutCompat>
    </FrameLayout>
</layout>